--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                 <section id="grafico" class="grafico section-home">
                     <div class="content container">
                         <div class="section-info work-info">
-                            <div class="work-title">
+                            <h2 class="work-title">
                                 <span class="work-title-little">DISEÑO</span>
                                 <span class="work-title-big">Gráfico</span>
-                            </div>
+                            </h2>
                             <div class="work-text">
                                 Como <strong></strong>diseñador gráfico tanto en soporte físico como digital desde 2004,
                                 he realizado una amplia variedad de proyectos abarcando desde creatividad de <strong>identidad corporativa</strong>
@@ -191,10 +191,10 @@
                 <section id="web" class="web section-home">
                     <div class="content container">
                         <div class="section-info work-info">
-                            <div class="work-title">
+                            <h2 class="work-title">
                                 <span class="work-title-little">DESARROLLO</span>
                                 <span class="work-title-big">Web</span>
-                            </div>
+                            </h2>
                             <div class="work-text">
                                 Autodidacta desde que <i>la web</i> era estática, 
                                 he desarrollado multitud de proyectos web profesionalmente desde hace más de 8 años, 
@@ -214,10 +214,10 @@
                 <section id="dev" class="section-home">
                     <div class="content container">
                         <div class="section-info work-info">
-                            <div class="work-title">
+                            <h2 class="work-title">
                                 <span class="work-title-little">FRONT-END</span>
                                 <span class="work-title-big">Dev</span>
-                            </div>
+                            </h2>
                             <div class="work-text">
                                 Actualmente desarrollando mis conocimientos de <strong>JavaScript</strong>, 
                                 tanto enfocados a la <strong>manipulación del DOM</strong> como a <strong>algoritmos y estructuras de datos</strong>,
@@ -235,10 +235,10 @@
                 <section id="contact" class="section-home">
                     <div class="content container">
                         <div class="section-info work-info">
-                            <div class="work-title">
+                            <h2 class="work-title">
                                 <span class="work-title-little">CONTACTA</span>
                                 <span class="work-title-big">Conmigo</span>
-                            </div>
+                            </h2>
                             <div class="work-text">
                                 Actualmente estoy <strong>abierto a oportunidades laborales</strong> interesantes 
                                 que me ofrezcan la posibilidad de aprovechar mis <strong>conocimientos</strong> y <strong>experiencia</strong>, 
