New mian block order

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     </svg>                    
                     <nav id="main-nav">
                         <a class="menu-item active" data-ref="about" href="#" title="Sobre mi">Inicio</a>
-                        <a class="menu-item" data-ref="grafico" href="#grafico" title="Diseño gráfico">Gráfico</a>
-                        <a class="menu-item" data-ref="web" href="#web" title="Desarrollo Web">&lt;Web&gt</a>
                         <a class="menu-item" data-ref="dev" href="#dev" title="Desarrollo de Software">Dev()</a>
+                        <a class="menu-item" data-ref="web" href="#web" title="Desarrollo Web">&lt;Web&gt</a>
+                        <a class="menu-item" data-ref="grafico" href="#grafico" title="Diseño gráfico">Gráfico</a>
                         <a class="menu-item" data-ref="contact" href="#contact" title="Contacto">Contacto</a>
                     </nav>
                 </div>
@@ -128,10 +128,9 @@
                                 <span class="about-code-red">.es(</span>
                             </span>
                             <p class="about-text">
-                                Sergi Talavera: diseñador gráfico, web y Front-End Dev
+                                Sergi Talavera: Desarrollador Front-End, diseñador gráfico y web
                                 afincado en El Prat de Llobregat (Barcelona),
-                                con experiencia profesional en diseño digital e impreso,
-                                maquetación y desarrollo web.
+                                con experiencia profesional en desarrollo y maquetación web, diseño digital e impreso.
                                 <br>
                                 <a href="" class="mobile-visible button button-cv" title="Ver Currículum">Ver CV</a>
                             </p>
@@ -143,10 +142,10 @@
                         </div>
                         <div id="about-links">
                             <ul>
-                                <li id="about-grafico-link" class="about-main-link">
-                                    <a href="#grafico" title="Diseño Gráfico">
-                                        <span class="about-main-link-big">Gráfico</span>
-                                        <span class="about-main-link-description">Logotipos, cartelería, flyers, retoque...</span>
+                                <li id="about-dev-link" class="about-main-link">
+                                    <a href="#dev" title="Desarrollo de Software">
+                                        <span class="about-main-link-big">Dev()</span>
+                                        <span class="about-main-link-description">JavaScript...</span>
                                     </a>
                                 </li>
                                 <li id="about-web-link" class="about-main-link">
@@ -155,36 +154,32 @@
                                         <span class="about-main-link-description">HTML, CSS, CMSs, SEO...</span>
                                     </a>
                                 </li>
-                                <li id="about-dev-link" class="about-main-link">
-                                    <a href="#dev" title="Desarrollo de Software">
-                                        <span class="about-main-link-big">Dev()</span>
-                                        <span class="about-main-link-description">JavaScript...</span>
+                                <li id="about-grafico-link" class="about-main-link">
+                                    <a href="#grafico" title="Diseño Gráfico">
+                                        <span class="about-main-link-big">Gráfico</span>
+                                        <span class="about-main-link-description">Logotipos, cartelería, flyers, retoque...</span>
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </section>
-                <section id="grafico" class="grafico section-home">
+                <section id="dev" class="section-home">
                     <div class="content container">
                         <div class="section-info work-info">
                             <h2 class="work-title">
-                                <span class="work-title-little">DISEÑO</span>
-                                <span class="work-title-big">Gráfico</span>
+                                <span class="work-title-little">FRONT-END</span>
+                                <span class="work-title-big">Dev</span>
                             </h2>
                             <div class="work-text">
-                                Como <strong></strong>diseñador gráfico tanto en soporte físico como digital desde 2004,
-                                he realizado una amplia variedad de proyectos abarcando desde creatividad de <strong>identidad corporativa</strong>
-                                hasta <strong>maquetación y cierre para impresión</strong> de todo tipo de documentos.
-                                <span class="extra hidden">
-                                    <br><br>
-                                    Soy exigente en la <strong>forma</strong> y la <strong>función</strong>, <strong>estructurado</strong> y <strong>ordenado</strong>,
-                                    por lo que siempre he tenido un pie en el <strong>desarrollo web</strong>.
-                                </span>
+                                Actualmente desarrollando aplicaciones <strong>JavaScript</strong>, 
+                                enfocado tanto a la <strong>manipulación del DOM</strong> como a <strong>algoritmos y estructuras de datos</strong>,
+                                practicando con <strong>CLI</strong> y <strong>GIT</strong> y adentrándome en <strong>React</strong> y <strong>SASS</strong>.
                             </div>
                             <a class="button next mobile-hidden" href="#web" title="Ir a desarrollo Web">Ir a Web</a>
                         </div>
-                        <div class="work-showcase work-showcase-grafico">
+                        <div class="work-showcase work-showcase-dev">
+
                         </div>
                     </div>
                 </section>
@@ -198,37 +193,29 @@
                             <div class="work-text">
                                 Autodidacta desde que <i>la web</i> era estática, 
                                 he desarrollado multitud de proyectos web profesionalmente desde hace más de 8 años, 
-                                realizando desde el <strong>diseño</strong> hasta la maquetación completa de <strong>plantillas</strong>, en <strong>HTML</strong> y <strong>CSS</strong>,  
+                                realizando desde el <strong>diseño UI</strong> hasta la maquetación completa de <strong>plantillas</strong>, en <strong>HTML</strong> y <strong>CSS</strong>,  
                                 prestando especial atención a la optimización de recursos y al <strong>SEO</strong>.
-                                <span class="extra hidden">
-                                    <br><br>
-                                    El siguiente paso natural ha sido formarme en programación con <strong>JavaScript</strong>.
-                                </span>
                             </div>
-                            <a class="button next mobile-hidden" href="#dev" title="Ir a Desarrollo de Software">Ir a Dev</a>
+                            <a class="button next mobile-hidden" href="#grafico" title="Ir a Diseño gráfico">Ir a Gráfico</a>
                         </div>
                         <div class="work-showcase work-showcase-web">
                         </div>
                     </div>
                 </section>
-                <section id="dev" class="section-home">
+                <section id="grafico" class="grafico section-home">
                     <div class="content container">
                         <div class="section-info work-info">
                             <h2 class="work-title">
-                                <span class="work-title-little">FRONT-END</span>
-                                <span class="work-title-big">Dev</span>
+                                <span class="work-title-little">DISEÑO</span>
+                                <span class="work-title-big">Gráfico</span>
                             </h2>
                             <div class="work-text">
-                                Actualmente desarrollando mis conocimientos de <strong>JavaScript</strong>, 
-                                tanto enfocados a la <strong>manipulación del DOM</strong> como a <strong>algoritmos y estructuras de datos</strong>,
-                                practicando con <strong>CLI</strong> y <strong>GIT</strong>.
-                                <br>
-                                <br>
-                                Entusiasmado por comenzar con <strong>React</strong> y <strong>Node.js</strong> + <strong>Express</strong>.
+                                Como <strong></strong>diseñador gráfico tanto en soporte físico como digital desde 2004,
+                                he realizado una amplia variedad de proyectos abarcando desde creatividad de <strong>identidad corporativa</strong>
+                                hasta <strong>maquetación y arte final</strong> de todo tipo de documentos.
                             </div>
                         </div>
-                        <div class="work-showcase work-showcase-dev">
-
+                        <div class="work-showcase work-showcase-grafico">
                         </div>
                     </div>
                 </section>
@@ -300,9 +287,8 @@
                             <span class="cv-fecha">2014 - 2022</span>
                             <span class="cv-lugar">El Prat de Llobregat</span>
                             <p class="cv-text">
-                                Desarrollador Front-End, realizando desde el diseño hasta la maquetación HTML y CSS de plantillas y 
-                                contenido así como su gestión, de un gran número de páginas y proyectos web utilizando un CMS Propietario, 
-                                realizando también el SEO y labores eventuales de diseño gráfico. 
+                                Desarrollador Front-End, realizando desde el diseño hasta la maquetación HTML y CSS de plantillas y contenido así como su gestión, 
+                                de más de 250 páginas y proyectos web utilizando un CMS Propietario, realizando labores de diseño gráfico y SEO.
                                 <a href="https://www.acolor.es" title="aColor Diseño Web" target="_blank">www.acolor.es</a>
                             </p>
                         </li>
@@ -311,8 +297,8 @@
                             <span class="cv-fecha">2012 - 2017</span>
                             <span class="cv-lugar">El Prat de Llobregat</span>
                             <p class="cv-text">
-                                Diseñador gráfico y web, desarrollando trabajos de identidad e imagen corporativa así como campañas que incluían labores como 
-                                diseño de logotipos, tarjetas, cartelería, flyers, y edición de plantillas web para CMS (principalmente Joomla!) entre otros. 
+                                Diseñador gráfico y web, desarrollando trabajos de identidad corporativa así como campañas incluyendo labores de diseño de logotipos, 
+                                tarjetas, cartelería, flyers, y edición de plantillas web para Joomla! entre otros.
                                 <a href="https://www.lambadaestudio.com" title="aLambada Estudio" target="_blank">www.lambadaestudio.com</a>
                             </p>
                         </li>
@@ -321,7 +307,7 @@
                             <span class="cv-fecha">2013 - 2014</span>
                             <span class="cv-lugar">El Prat de Llobregat</span>
                             <p class="cv-text">
-                                Diseñador gráfico centrado principalmente en el diseño vectorial para impresión y corte de vinilos para rotulación y textil, 
+                                Diseñador gráfico centrado principalmente en diseño y trazado vectorial para impresión y corte de vinilos para rotulación y textil, 
                                 así como diseño de papelería para restauración como cartas, trípticos o flyers.
                                 <a href="https://7publicidad.com/" title="7 Publicidad" target="_blank">www.7publicidad.com</a>
                             </p>
@@ -331,7 +317,7 @@
                             <span class="cv-fecha">2011</span>
                             <span class="cv-lugar">Barcelona</span>
                             <p class="cv-text">
-                                Editor y diseñador gráfico, realizando labores de retoque fotográfico y diseño, encargado de la preparación de lotes de imágenes 
+                                Retocador fotográfico y diseñador gráfico, encargado de la preparación de lotes de imágenes 
                                 de productos para mostrar en la web y desarrollando material pulbicitario para campañas web como banners, logotipos o fondos web.
                             </p>
                         </li>
@@ -340,7 +326,7 @@
                             <span class="cv-fecha">2010 - 2011</span>
                             <span class="cv-lugar">El Prat de Llobregat</span>
                             <p class="cv-text">
-                                Diseñador web, desarrollando exclusivamente el interfaz web con Photoshop, manteniendo contacto personal con el cliente.
+                                Diseñador UI, desarrollando exclusivamente interfaces con Photoshop, manteniendo contacto personal con el cliente.
                             </p>
                         </li>
                         <li class="cv-item">
@@ -348,9 +334,8 @@
                             <span class="cv-fecha">2006 - 2007</span>
                             <span class="cv-lugar">Barcelona</span>
                             <p class="cv-text">
-                                Diseñador gráfico editorial creando principalmente sets completos de coleccionables para RBA y Planeta DeAgostini, 
-                                desarrollando la imagen completa de la colección, soporte, maquetación de fascículos y cupones, cubiertas y portadillas de libros, 
-                                packaging, selección, compra y tratamiento de imágenes, arte final y cierre para impresión.
+                                Diseñador gráfico editorial, creando sets completos de coleccionables para RBA y Planeta DeAgostini, desarrollando la 
+                                imagen de las colecciones, soporte y packaging, maquetación de fascículos, cupones y cubiertas, tratamiento de imágenes y arte final.
                             </p>
                         </li>
                         <li class="cv-item">
@@ -367,8 +352,8 @@
                             <span class="cv-fecha">2004 - 2005</span>
                             <span class="cv-lugar">Barcelona</span>
                             <p class="cv-text">
-                                Auxiliar de diseño en un estudio dedicado al sector editorial desarrollando labores de documentación, realización de maquetas,
-                                maquetación y cierre de documentos para impresión.
+                                Auxiliar de diseño en un estudio dedicado al sector editorial desarrollando labores de documentación, 
+                                realización de maquetas, maquetación y arte final.
                             </p>
                         </li>
                     </ul>
@@ -381,7 +366,7 @@
                     <ul>
                         <li class="cv-item">
                             <h3 class="cv-empresa">
-                                HTML · CSS · SEO · CMS · JavaScript · Photoshop · Illustrator
+                                HTML · CSS · CMS · JavaScript · SEO · Photoshop · Illustrator
                             </h3>
                         </li>
                     </ul>
