Now using Intersection Observer API to detect the active section, and moved from pure scroll listeners to MouseWheel listeners and Touch Listeners for mobile navigation

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
             </header>
             <div id="display">
-                <section id="about" class="section-home visible">
+                <section id="about" class="section-home">
                     <div class="content container">
                         <div class="section-info about-info">
                             <h1 data-text="XEXI" id="about-title">
@@ -460,8 +460,11 @@
             </div>
         </template>
     </div>
+    <script src="js/globals.js"></script>
     <script src="js/preload.js"></script>
-    <script src="js/about.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/about-animations.js"></script>
+    <script src="js/sidebar.js"></script>
+    <script src="js/works-loader.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
