Added contact button from Graphic section

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                                 he realizado una amplia variedad de proyectos abarcando desde creatividad de <strong>identidad corporativa</strong>
                                 hasta <strong>maquetación y arte final</strong> de todo tipo de documentos.
                             </div>
+                            <a class="button next mobile-hidden" href="#contact" title="Ir a Contacto">Ir a contacto</a>
                         </div>
                         <div class="work-showcase work-showcase-grafico">
                         </div>
