--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <path class="st0" d="M29.2,19H2.8C1.3,19,0,17.7,0,16.2v0c0-1.6,1.3-2.8,2.8-2.8h26.3c1.6,0,2.8,1.3,2.8,2.8v0C32,17.7,30.7,19,29.2,19z"/>
                     </svg>                    
                     <nav id="main-nav">
-                        <a class="menu-item active" data-ref="about" href="#" title="Sobre mi">Inicio</a>
+                        <a class="menu-item active" data-ref="about" href="#about" title="Sobre mi">Inicio</a>
                         <a class="menu-item" data-ref="dev" href="#dev" title="Desarrollo de Software">Dev()</a>
                         <a class="menu-item" data-ref="web" href="#web" title="Desarrollo Web">&lt;Web&gt</a>
                         <a class="menu-item" data-ref="grafico" href="#grafico" title="Diseño gráfico">Gráfico</a>
